scss/_modules.scss
.main-content {
	top: 2*$xxxlarge-gap + $large-gap;
	padding-bottom: $super-gap;
	position: relative;
}

.feature-article-container {
	box-shadow: 0 0 1px -4px rgba(0, 0, 0, 0.6);
	background: $dwhite;
	a img {
		width: 100%;
	}
}  /* .feature-article-container */

.primary {
	margin: $med-gap 0;
	background: $dwhite;
}  /* .primary */

.repost-article {
	a {
		box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
		background: $lblue;
		padding: $large-gap;
		margin: 0 $xxxlarge-gap $xxlarge-gap $large-gap;
		display: inline-block;
		&:hover, &:focus {
			box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.4);
			transition: 0.2s linear all;
			cursor: pointer;
		}
		.repost-title {
			text-align: center;
			@include title-styles( 0 $med-gap $small-gap 0 );
		}
		.repost-excerpt {
			padding-bottom: $med-gap;
			margin: 0 10%;
			img {
				width: 100%;
				display: inline-block;
			}
		}
	}
}

